# tigervnc-setup

./: LICENSE  README.md  noxfile.py  pyproject.toml  setup-client.py  setup-server.py  xstartup
.devcontainer/: Dockerfile
.github/workflows/: pdoc.yml
ci/templates/: credits.mako
docs/: login.png.REMOVED.git-id  plasma.jpeg.REMOVED.git-id
docs/pics/: program_logo.png.REMOVED.git-id
src/: setup-client.py  setup-server.py  xstartup
